--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-# @phmnb and @stjeske will be requested for
+# @martingebel and @stjeske will be requested for
 # review when someone opens a pull request.
 *       @martingebel @stjeske
